assets/openshift-state-metrics/network-policy-downstream.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: openshift-state-metrics
    app.kubernetes.io/managed-by: cluster-monitoring-operator
    app.kubernetes.io/name: openshift-state-metrics
    app.kubernetes.io/part-of: openshift-monitoring
  name: allow-all-openshift-state-metrics
  namespace: openshift-monitoring
spec:
  egress:
  - {}
  ingress:
  - {}
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
